# minit

./: .envrc  .gitignore  Cargo.toml  README.md
snapshots/init/.minit/: config
snapshots/working_dir/.minit/: config
src/: cli.rs  error.rs  lib.rs  main.rs  object.rs  repository.rs
tests/: snapshot_tests.rs
tests/snapshots/: snapshot_tests__cat_file (object_read) unhashed objects.snap  snapshot_tests__hash_object directory tree.snap  snapshot_tests__init directory tree.snap  snapshot_tests__{:#?}.snap
