[package]
name = "minit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
configparser = "3.1.0"
flate2 = "1.1.5"
indexmap = "2.12.1"
itertools = "0.14.0"
regex = "1.12.2"
sha1 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
insta = { version = "1.44.3", features = ["yaml"] }
